--- a/incident-management/package.json
+++ b/incident-management/package.json
@@ -17,6 +17,16 @@
     "start": "cds-serve",
     "watch-incidents": "cds watch --open incidents/webapp/index.html?sap-ui-xx-viewCache=false"
   },
+  "cds": {
+    "requires": {
+      "[development]": {
+        "auth":{
+          "kind": "mocked",
+          "users": {}
+        }
+      }
+    }
+  },
   "sapux": [
     "app/incidents"
   ]
